# certdeploy

./: .coveragerc  .dockerignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  ROADMAP.md  TODO.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
docker/: build.sh  publish.sh
docker/client/: Dockerfile  entrypoint.sh
docker/client/conf/: client.yml
docker/server/: Dockerfile  entrypoint.sh
docker/server/conf/: server.yml
docs/: conf.py  index.md  requirements.txt
src/certdeploy/: __init__.py  errors.py
src/certdeploy/client/: __init__.py  _main.py  daemon.py  deploy.py  errors.py  update.py
src/certdeploy/client/config/: __init__.py  client.py  service.py
src/certdeploy/server/: __init__.py  _main.py  daemon.py  renew.py  server.py
src/certdeploy/server/config/: __init__.py  _validation.py  client.py  server.py
tests/: conftest.py  test_server.py
tests/client/config/: test_accepts_valid.py  test_errors_invalid.py  test_logging.py  test_mode.py
tests/client/config/service/: test_docker_container.py  test_docker_service.py  test_rc_service.py  test_script.py  test_systemd.py
tests/client/deploy/: test_fails_invalid_pems.py  test_sets_permissions.py  test_validates_pems.py
tests/client/docker/: test_client_container.py  test_entrypoint_sh.py
tests/client/main/: test_args.py  test_errors.py
tests/client/update/: test_docker_container.py  test_docker_service.py  test_rc_service.py  test_script.py  test_systemd.py
tests/docker/: docker-compose.yml  run.sh  setup.sh  stack.yml
tests/docker/client/: client_docker_container.yml  client_docker_service.yml  client_everything.yml  client_noop.yml  client_script.yml  client_systemd.yml
tests/docker/mock/: mock-certbot.sh  mock-systemctl.sh
tests/docker/mock/scripts/: fail.sh  (+1 more)
tests/docker/server/: server_basic.yml  server_client_retry.yml  server_daemon_mock_certbot.yml  server_fail_fast.yml  server_fail_fast_daemon_mock_certbot.yml  server_fail_fast_runner.yml  server_just_push.yml  server_parallel_basic.yml  server_parallel_retry.yml  server_push_interval.yml  server_renew_mock_certbot.yml  server_serial_retry.yml
tests/end_to_end/: test_mostly_default_update_containers.py
tests/fixtures/: client_config.py  docker_container.py  docker_service.py  errors.py  keys.py  logging.py  mock_certbot.py  mock_fail_client.py  mock_server.py  rc_service.py  script.py  server_config.py  systemd.py  threading.py  utils.py
tests/server/config/: test_accepts_valid.py  test_errors_invalid.py  test_logging.py
tests/server/docker/: test_certbot_passthrough.py  test_entrypoint_sh.py
tests/server/main/: test_args.py  test_env.py  test_errors.py
tests/server/push/: test_fail_fast.py  test_interval.py  test_mode_parallel.py  test_mode_serial.py  test_retry_interval.py
tests/server/renew/: test_renew_certs.py
(+8 files in other folders)
