# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = certdeploy
description = A tool to automatically sync certificates and update services.
author = haxwithaxe
author_email = spam@haxwithaxe.net
license = GPL-3.0-only
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/haxwithaxe/certdeploy/
project_urls =
    Documentation = https://certdeploy.readthedocs.org/
    Source = https://github.com/haxwithaxe/certdeploy/
    Tracker = https://github.com/haxwithaxe/certdeploy/issues
    Download = https://pypi.org/project/certdeploy/#files

platforms = any

classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Environment :: No Input/Output (Daemon)
    Topic :: System :: Systems Administration
    Topic :: Utilities


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.8

install_requires =
    docker==6.1.3
    paramiko==3.3.1
    PyYAML==6.0.1
    schedule==1.2.0
    typer==0.9.0

[options.packages.find]
where = src
exclude =
    tests
    docker

[options.extras_require]
docs =
    sphinx
    myst-parser

testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
     certdeploy-client = certdeploy.client._main:_app
     certdeploy-server = certdeploy.server._main:_app

[tool:pytest]
addopts =
    --cov certdeploy --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
markers =
     certdeploy_docker: marks tests as testing one or both certdeploy docker images. These require an up to date build of the docker image under test.
     docker: mark tests as operating on the docker daemon
     net: mark tests as doing actual network operations
     real: mark tests that touch the system outside of temporary resources and docker
     slow: mark tests as slow (deselect with '-m "not slow"')
     swarm: mark tests as requiring docker swarm to be setup already
     system: mark end-to-end system tests

[devpi:upload]
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 80
extend_ignore =
    D107  # Don't need __init__ docstrings and class docstrings
    E203  # Handled by Black
    E266  # Allow multiple leading # for hierarchical comments
    W503  # Handled by Black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.3
package = certdeploy
extensions =
    markdown
    pre_commit
